update manifest [ci skip]

--- a/nextflow.config
+++ b/nextflow.config
@@ -34,13 +34,6 @@ params {
     parallel                   = false
 
 
-    // Hidden parameters
-
-    user                       = "root"
-    project                    = "mtbseqnf"
-    mtbseq_path                = "MTBseq"
-    cohort_tsv                 = "${params.project}_cohort.tsv"
-
     // Config options
     config_profile_name        = null
     config_profile_description = null
@@ -67,6 +60,15 @@ params {
     //-------------------------------------
     // OPTIONS FROM MTBSEQ MANUAL
     //-------------------------------------
+
+    // Hidden parameters
+    user                       = "root"
+    mtbseq_path                = "MTBseq"
+
+
+    // Name of the project and the analysis
+    cohort_tsv                 = "${params.project}_cohort.tsv"
+    project                    = "mtbseqnf"
 
     //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
     // The all_vars only needs to be activated in MTBseq. But in mtbseq-nf we'll specify it as false
@@ -315,9 +317,10 @@ manifest {
     description     = """`MTBseq-nf` pipeline makes [MTBseq](https://github.com/ngs-fzb/MTBseq_source) simple and easy to use via [Nextflow](https://www.nextflow.io/) workflow manager."""
     mainScript      = 'main.nf'
     nextflowVersion = '!>=23.04.0'
-    version         = '1.0dev'
-    doi             = ''
+    version         = '1.0'
+    doi             = '10.5281/zenodo.5498063'
 }
+
 
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
