allow optional cohort TSV file [ci skip]

--- a/nextflow.config
+++ b/nextflow.config
@@ -67,7 +67,7 @@ params {
 
 
     // Name of the project and the analysis
-    cohort_tsv                 = "${params.project}_cohort.tsv"
+    cohort_tsv                 = null
     project                    = "mtbseqnf"
 
     //NOTE: Setting this OPTION will skip all filtering steps and report the calculated information for all positions in the input file.
