--- a/conf/test_publication.config
+++ b/conf/test_publication.config
@@ -22,8 +22,9 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    input  = "${projectDir}/data/test_data/input_publication.csv"
+    input  = "${projectDir}/data/test_data/test_publication.csv"
 
+    cohort_tsv  = "${projectDir}/data/test_data/test_publication_cohort.tsv"
 
     outdir = "test-publication-profile-results"
 }
