--- a/conf/test.config
+++ b/conf/test.config
@@ -24,6 +24,8 @@ params {
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
     input  = "${projectDir}/data/test_data/test_3_samples.csv"
 
+    cohort_tsv  = "${projectDir}/data/test_data/test_3_cohort.tsv"
+
     outdir = "test-profile-results"
 
 
